fix(layout): spacings

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -31,6 +31,7 @@
 
 	/* Custom pairs */
 	--space-s-l: clamp(1rem, calc(0.33rem + 3.33vw), 3rem);
+	--space-xl-m: clamp(2.25rem, calc(3.25rem + -1.25vw), 3rem);
 }
 
 @layer base {
